examples/Passing/Functions/no_func_call.c
int foo (int a, int b, int c) {
    return a + b + c;
}

int main() {
    return 5;
}
