examples/Failing/Functions/identical_dec.c
int foo(int a, int b);

int foo(int a) {
    return a;
}

int main() {
    return foo(5);
}
